--- a/.github/workflows/daily-brief.yml
+++ b/.github/workflows/daily-brief.yml
@@ -3,7 +3,7 @@ name: Generate Daily AI Brief
 on:
   schedule:
     - cron: "0 1 * * *"
-  workflow_dispatch:
+  workflow_dispatch: {}
 
 permissions:
   contents: write
